--- a/src/app/Components/side-menu/side-menu.component.html
+++ b/src/app/Components/side-menu/side-menu.component.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="item">
-        <button class="btn" (click)="setTheme('blue')">Change Color</button>
+        <button class="btn" (click)="setTheme('hsl(291, 74%, 90%)')">Change Color</button>
         <button class="btn" (click)="sentSize()">Change Size</button>
     </div>
 </div>
