--- a/src/app/Components/side-menu/side-menu.component.css
+++ b/src/app/Components/side-menu/side-menu.component.css
@@ -1,7 +1,7 @@
 .sidemenu-container{
     width:50%;
     height: 100vh;
-    background-color: blanchedalmond;
+    background-color: rgb(227, 233, 187);
     display: flex;
     flex-direction: column;
     align-items: start;
